--- a/package.json
+++ b/package.json
@@ -22,19 +22,23 @@
     "lint-staged": "lint-staged",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json|ts|tsx)\"",
     "format": "npm run prettier -- --write",
-    "check-format": "npm run prettier -- --list-different"
+    "check-format": "npm run prettier -- --list-different",
+    "test": "mocha __test__/**/*.test.js"
   },
   "keywords": [],
   "author": "Saifur Rahman Tanvir",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai": "^5.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^11.0.1",
     "mongoose": "^6.8.4",
     "nodemon": "^2.0.20",
+    "supertest": "^7.0.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
